# agent-commander

./: .gitignore  .gitkeep  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  bunfig.toml  deno.json  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  e2e-gemini.yml  e2e-qwen.yml  js.yml  rust.yml  test.yml
docs/: common-concepts.md
docs/case-studies/issue-15/: README.md  agent-cli-readme.md  evidence-timeline.md  gemini-cli-info.json  issue-details.txt
docs/case-studies/issue-17/: README.md
docs/case-studies/issue-19/: README.md
docs/case-studies/issue-19/github/: issue-19.json  js-template-placeholder-issue-url.txt  (+8 more)
docs/case-studies/issue-20/: README.md  ci-summary.md  cli-evidence.md  issue-details.md
docs/case-studies/issue-22/: README.md
docs/case-studies/issue-25/: README.md
docs/case-studies/issue-27/: README.md
docs/case-studies/issue-29/: README.md
docs/case-studies/issue-30/: README.md
docs/case-studies/issue-33/: README.md
docs/case-studies/issue-35/: README.md
docs/case-studies/issue-6/: README.md
examples/: basic-usage.mjs  cli-examples.sh  permission-relay.mjs
js/: CHANGELOG.md  README.md  deno.json  eslint.config.mjs  package-lock.json  package.json
js/.changeset/: 20260430-ci-docs-release-parity.md  20260430-github-install-and-release-workflows.md  add-qwen-coder-support.md  agent-permission-mode.md  execution-passthrough.md  fix-ratelimit-false-positive.md  normalized-result-metadata.md  per-command-approval-relay.md  prompt-file-input.md  qwen-gemini-prompt-passthrough.md  read-only-planning-mode.md  sync-hive-mind-2026-04-26.md
js/experiments/: test-qwen-integration.mjs
js/src/: cli-parser.mjs  command-builder.mjs  executor.mjs  index.mjs  result-metadata.mjs
js/src/permissions/: index.mjs  normalize.mjs  relay.mjs
js/src/streaming/: index.mjs  input-stream.mjs  ndjson.mjs  output-stream.mjs
js/src/tools/: agent.mjs  claude.mjs  codex.mjs  gemini.mjs  index.mjs  opencode.mjs  qwen.mjs  shell.mjs
js/test/: cli-parser.test.mjs  command-builder.test.mjs  index.test.mjs  package-readme.test.mjs  permissions.test.mjs  release-metadata.test.mjs  result-metadata.test.mjs  root-package.test.mjs  rust-release-registry.test.mjs  streaming.test.mjs  tools.test.mjs
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 20260426_181000_read_only_planning_mode.md  20260426_193000_sync_hive_mind_2026_04_26.md  20260430_ci_docs_release_parity.md  20260430_prompt_file_input.md  20260501_071500_execution_passthrough.md  20260501_071700_normalized_result_metadata.md  20260501_091500_release_latest_recovery.md  20260501_123000_qwen_gemini_prompt_passthrough.md  20260617_120000_agent_permission_mode.md  20260617_140000_per_command_approval_relay.md
rust/src/: cli_parser.rs  command_builder.rs  executor.rs  lib.rs  permissions.rs  result_metadata.rs
rust/src/streaming/: input_stream.rs  mod.rs  ndjson.rs  output_stream.rs
rust/src/tools/: agent.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  qwen.rs  shell.rs
rust/tests/: agent_tests.rs  claude_tests.rs  codex_tests.rs  gemini_tests.rs  lib_tests.rs  opencode_tests.rs  package_metadata_tests.rs  permissions_tests.rs  qwen_tests.rs  streaming_tests.rs  tools_tests.rs
scripts/js/: create-github-release.mjs  format-github-release.mjs  merge-changesets.mjs  publish-to-npm.mjs  run-node-tests.mjs  validate-changeset.mjs  version-and-commit.mjs
scripts/rust/: check-release-needed.mjs  create-github-release.mjs  release-registry.mjs  version-and-commit.mjs
scripts/shared/: detect-code-changes.mjs  release-metadata.mjs
src/: command-builder.mjs  executor.mjs  index.mjs
src/streaming/: input-stream.mjs  ndjson.mjs  output-stream.mjs
src/tools/: agent.mjs  claude.mjs  opencode.mjs
src/utils/: loader.mjs
test/: cli-parser.test.mjs  command-builder.test.mjs  index.test.mjs  streaming.test.mjs  tools.test.mjs
(+60 files in other folders)
