[package]
name = "agent-commander"
version = "0.1.0"
edition = "2021"
description = "A Rust library to control agents enclosed in CLI commands like Anthropic Claude Code CLI"
license = "Unlicense"
repository = "https://github.com/link-assistant/agent-commander"
keywords = ["agent", "cli", "automation", "process-management", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "agent_commander"
path = "src/lib.rs"

[[bin]]
name = "start-agent"
path = "src/bin/start_agent.rs"

[[bin]]
name = "stop-agent"
path = "src/bin/stop_agent.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
